--- a/apolloxiii.html
+++ b/apolloxiii.html
@@ -31,7 +31,7 @@
         <div class="container p-5 bg-custom text-white">
             
             <h1>Exploration & Discovery: Apollo 13 Mission</h1>
-            <img src="appollo.jpg" class="rounded img-fluid w-100" alt="Apollo 13">
+            <img src="appollo.webp" class="rounded img-fluid w-100" alt="Apollo 13">
             <br>
             <p>In the vast expanse of space exploration, few missions have captured the collective imagination of humanity quite like Apollo 13. Launched on April 11, 1970, this mission was intended to be NASA's third crewed lunar landing. However, what ensued was a dramatic tale of resilience, ingenuity, and the triumph of the human spirit over adversity.</p>
     
