--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="container-fluid p-5 bg-dark text-white">
         <div class="row">
             <div class="col-md-6 text-md-end">
-                <img src="appollo.jpg" alt="image" class="img-fluid rounded">
+                <img src="appollo.webp" alt="image" class="img-fluid rounded">
             </div>
             <div class="col-md-6">
                 <a href="apolloxiii.html" class="text-white text-decoration-none hover-underline"><h1>Exploration & Discovery: Apollo 13 Mission</h1></a>
