--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="bootstrap.js"></script>
     <style>
         .hero-section {
-            background-image: url('heroimg.jpg');
+            background-image: url('heroimg.webp');
             background-size: cover;
             background-position: center;
             height: 600px;
