--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Learn Something About Space and Technology because Half of My Energy Wasted on Random Knowledge.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="nbnceztUulkWeIB3j6GCddotrgE52C-p7udpSS3SHfk" />
     <title>What is happening</title>
