--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="container-fluid p-5 bg-dark text-white">
         <div class="row">
             <div class="col-md-6 text-md-end">
-                <img data-src="appollo.webp" src="placeholder.jpg" alt="image" class="img-fluid rounded" loading="lazy">
+                <img src="appollo.webp" alt="image" class="img-fluid rounded">
             </div>
             <div class="col-md-6">
                 <a href="apolloxiii.html" class="text-white text-decoration-none hover-underline"><h1>Exploration & Discovery: Apollo 13 Mission</h1></a>
@@ -101,9 +101,11 @@
             <div class="col-md-6 text-md-end">
                 <a href="starship.html" class="text-white text-decoration-none hover-underline"><h1>Exploration & Discovery: Starship</h1></a>
                 <p>SpaceX's Starship project is at the forefront of space exploration, promising a revolutionary approach to interplanetary travel and colonization. With ambitions to ferry humans to Mars and beyond, Starship represents the next giant leap in humanity's quest to explore the cosmos.</p>         
+            
+                
             </div>
             <div class="col-md-6">
-                <img data-src="starship.webp" src="placeholder.jpg" alt="image" class="img-fluid rounded" loading="lazy">
+                <img src="starship.webp" alt="image" class="img-fluid rounded">
             </div>
         </div>
     </div>
