--- a/index.html
+++ b/index.html
@@ -109,5 +109,16 @@
             </div>
         </div>
     </div>
+    <div class="container-fluid p-5 bg-dark text-white">
+        <div class="row">
+            <div class="col-md-6 text-md-end">
+                <img src="cryptocurrency_image.webp" alt="image" class="img-fluid rounded">
+            </div>
+            <div class="col-md-6">
+                <a href="crypto.html" class="text-white text-decoration-none hover-underline"><h1>Exploration & Discovery: Cryptocurrency and Blockchain</h1></a>
+                <p>In the ever-evolving landscape of finance and technology, few phenomena have captured the attention of the world quite like cryptocurrency and blockchain. Born out of a desire for decentralized, secure, and efficient financial systems, these innovations represent a paradigm shift in how we perceive and interact with money and data.</p>         
+            </div>
+        </div>
+    </div>
 </body>
 </html>
