--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="google-site-verification" content="nbnceztUulkWeIB3j6GCddotrgE52C-p7udpSS3SHfk" />
     <title>What is happening</title>
     <link rel="icon" type="image/png" href="jupiter.ico">
-    <link rel="stylesheet" href="bootstrap.css">
-    <script src="bootstrap.js"></script>
+    <link rel="stylesheet" href="bootstrap.css" media="print" disabled>
+    <script src="bootstrap.js" defer></script>
     <style>
         .hero-section {
             background-image: url('heroimg.webp');
