--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="bootstrap.css" media="print" disabled>
     <script src="bootstrap.js" defer></script>
     <style>
+        .bg-custom {
+            background-color: black;
+        }
+
         .hero-section {
             background-image: url('heroimg.webp');
             background-size: cover;
@@ -81,7 +85,7 @@
             <a href="#" class="btn btn-dark">See Blogs</a>
         </div>
     </div>
-    <div class="container-fluid p-5 bg-dark text-white">
+    <div class="container-fluid p-5 bg-custom text-white">
         <h1>Introduction</h1>
         <p>Welcome to "What is Happening?", your go-to blog for the latest updates and insights into the captivating realms of space and technology. Embark on a journey through the cosmos as we unravel the mysteries of the universe and delve into the cutting-edge innovations shaping our future. From awe-inspiring celestial phenomena to groundbreaking technological advancements, we're here to explore the frontiers of knowledge and discovery. Join us as we navigate the cosmos and decipher the wonders of space and technology together. Strap in and get ready to embark on an exhilarating voyage of exploration and enlightenment.</p>
     </div>
@@ -96,7 +100,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid p-5 bg-dark text-white">
+    <div class="container-fluid p-5 bg-custom text-white">
         <div class="row">
             <div class="col-md-6 text-md-end">
                 <a href="starship.html" class="text-white text-decoration-none hover-underline"><h1>Exploration & Discovery: Starship</h1></a>
