--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Learn Something About Space and Technology because Half of My Energy Wasted on Random Knowledge.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="nbnceztUulkWeIB3j6GCddotrgE52C-p7udpSS3SHfk" />
     <title>What is happening</title>
+    <link rel="stylesheet" href="bootstrap.css">
     <link rel="icon" type="image/png" href="jupiter.ico">
-    <link rel="stylesheet" href="bootstrap.css" media="print" disabled>
-    <script src="bootstrap.js" defer></script>
+
+    <script src="bootstrap.js"></script>
     <style>
         .hero-section {
-            background-image: url('heroimg.webp');
+            background-image: url('heroimg.jpg');
             background-size: cover;
             background-position: center;
             height: 600px;
@@ -78,17 +77,17 @@
         <div class="container">
             <h1>Welcome to What is Happening?</h1>
             <p>See The Space Growing</p>
-            <a href="#apollo-section" class="btn btn-dark">See Blogs</a>
+            <a href="#" class="btn btn-dark">See Blogs</a>
         </div>
     </div>
     <div class="container-fluid p-5 bg-dark text-white">
         <h1>Introduction</h1>
         <p>Welcome to "What is Happening?", your go-to blog for the latest updates and insights into the captivating realms of space and technology. Embark on a journey through the cosmos as we unravel the mysteries of the universe and delve into the cutting-edge innovations shaping our future. From awe-inspiring celestial phenomena to groundbreaking technological advancements, we're here to explore the frontiers of knowledge and discovery. Join us as we navigate the cosmos and decipher the wonders of space and technology together. Strap in and get ready to embark on an exhilarating voyage of exploration and enlightenment.</p>
     </div>
-    <div class="container-fluid p-5 bg-dark text-white" id="apollo-section">
+    <div class="container-fluid p-5 bg-dark text-white">
         <div class="row">
             <div class="col-md-6 text-md-end">
-                <img src="appollo.webp" alt="image" class="img-fluid rounded">
+                <img src="appollo.jpg" alt="image" class="img-fluid rounded">
             </div>
             <div class="col-md-6">
                 <a href="apolloxiii.html" class="text-white text-decoration-none hover-underline"><h1>Exploration & Discovery: Apollo 13 Mission</h1></a>
@@ -101,22 +100,9 @@
             <div class="col-md-6 text-md-end">
                 <a href="starship.html" class="text-white text-decoration-none hover-underline"><h1>Exploration & Discovery: Starship</h1></a>
                 <p>SpaceX's Starship project is at the forefront of space exploration, promising a revolutionary approach to interplanetary travel and colonization. With ambitions to ferry humans to Mars and beyond, Starship represents the next giant leap in humanity's quest to explore the cosmos.</p>         
-            
-                
             </div>
             <div class="col-md-6">
                 <img src="starship.webp" alt="image" class="img-fluid rounded">
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid p-5 bg-dark text-white">
-        <div class="row">
-            <div class="col-md-6 text-md-end">
-                <img src="cryptocurrency_image.webp" alt="image" class="img-fluid rounded">
-            </div>
-            <div class="col-md-6">
-                <a href="crypto.html" class="text-white text-decoration-none hover-underline"><h1>Exploration & Discovery: Cryptocurrency and Blockchain</h1></a>
-                <p>In the ever-evolving landscape of finance and technology, few phenomena have captured the attention of the world quite like cryptocurrency and blockchain. Born out of a desire for decentralized, secure, and efficient financial systems, these innovations represent a paradigm shift in how we perceive and interact with money and data.</p>         
             </div>
         </div>
     </div>
